--- a/index.html
+++ b/index.html
@@ -337,6 +337,10 @@
 
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
           <!-- <div class="col-lg-6">
             <form action="" method="post" role="form" class="contactForm">
@@ -415,6 +419,7 @@
 
     </div>
   </div>
+
   <!-- End section footer -->
 
   <!-- JavaScript Libraries -->
