--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kim Tablac</title>
+  <title>Folio - Personal Portfolio Template</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -404,9 +404,9 @@
 
       </div>
 
-      <p>&copy; Copyrights Kim Tablac. All rights reserved.</p>
+      <p>&copy; Copyrights Folio. All rights reserved.</p>
 
-      <div class="credits">
+      <div class="credits" style="font-size: 12px;">
         <!--
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
