--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
+      <p>&copy; Copyrights Kim Tablac. All rights reserved.</p>
 
       <div class="credits" style="font-size: 12px;">
         <!--
