--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <p>Front End Web Developer, Wordpress Expert, Freelancer</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="https://www.facebook.com/Tablac.Kim"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/kim_tablac"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/kim.tablac/"><i class="ion-social-instagram"></i></a></li>              
+          <li><a href="https://www.facebook.com/Tablac.Kim"><i style="font-size: 30px"  class="ion-social-facebook"></i></a></li>
+          <li><a href="https://twitter.com/kim_tablac"><i style="font-size: 30px"  class="ion-social-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/kim.tablac/"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>              
         </ul>
       </div>
     </div>
