--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <p>Front End Web Developer, Wordpress Expert, Freelancer</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="https://www.facebook.com/Tablac.Kim"><i style="font-size: 30px"  class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/kim_tablac"><i style="font-size: 30px"  class="ion-social-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/kim.tablac/"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>   
-           <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/"><i style="font-size: 30px"  class="ion-social-youtube"></i>
+          <li><a href="https://www.facebook.com/Tablac.Kim" target="_blank"><i style="font-size: 30px"  class="ion-social-facebook"></i></a></li>
+          <li><a href="https://twitter.com/kim_tablac" target="_blank"><i style="font-size: 30px"  class="ion-social-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/kim.tablac/" target="_blank"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>   
+           <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/" target="_blank"><i style="font-size: 30px"  class="ion-social-youtube"></i>
         </ul>
       </div>
     </div>
@@ -396,10 +396,10 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="https://www.facebook.com/Tablac.Kim"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/kim_tablac"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/kim.tablac/"><i class="ion-social-instagram"></i></a></li>  
-          <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/"><i style="font-size: 30px"  class="ion-social-youtube"></i>
+          <li><a href="https://www.facebook.com/Tablac.Kim" target="_blank"><i class="ion-social-facebook"></i></a></li>
+          <li><a href="https://twitter.com/kim_tablac" target="_blank"><i class="ion-social-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/kim.tablac/" target="_blank"><i class="ion-social-instagram"></i></a></li>  
+          <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/" target="_blank"><i style="font-size: 30px"  class="ion-social-youtube"></i>
         </ul>
 
       </div>
