--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
   <link rel="shortcut icon" href="images/logo.png">
 
   <!-- =======================================================
-    Developer: Kim Tablac
-    Hello, Meg meg!
+    Theme Name: Folio
+    Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
+    Author: BootstrapMade.com
+    Author URL: https://bootstrapmade.com
   ======================================================= -->
 </head>
 
@@ -61,7 +63,7 @@
       </div>
     </div>
   </nav>
-  <!-- End section navbar -->
+  <!-- End section navbar https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1-->
 
 
   <!-- start section header -->
@@ -73,44 +75,15 @@
         <p>Front End Web Developer, Wordpress Expert, Freelancer</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="https://www.facebook.com/Tablac.Kim" target="_blank"><i style="font-size: 30px"  class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/kim_tablac" target="_blank"><i style="font-size: 30px"  class="ion-social-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/kim.tablac/" target="_blank"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>   
-           <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/" target="_blank"><i style="font-size: 30px"  class="ion-social-youtube"></i>
+          <li><a href="https://www.facebook.com/Tablac.Kim"><i style="font-size: 30px"  class="ion-social-facebook"></i></a></li>
+          <li><a href="https://twitter.com/kim_tablac"><i style="font-size: 30px"  class="ion-social-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/kim.tablac/"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>  
+           <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/"><i style="font-size: 30px"  class="ion-social-youtube"></i></a></li>                   
         </ul>
       </div>
     </div>
   </div>
   <!-- End section header -->
-
-
-  <!-- start section about us -->
-  <!-- <div id="about" class="paddsection">
-    <div class="container">
-      <div class="row justify-content-between">
-
-        <div class="col-lg-4 ">
-          <div class="div-img-bg">
-            <div class="about-img">
-              <img src="images/me.jpg" class="img-responsive" alt="me">
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-7">
-          <div class="about-descr">
-
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- end section about us -->
-
 
   <!-- start section services -->
   <!-- <div id="services">
@@ -336,6 +309,14 @@
 
             </div>
           </div>
+          <div class="col-lg-6">
+            <div class="about-descr" >
+
+            
+            <h3 class="separator" style="color: #FFC133;">&quot The light keeps shining in the dark, and darkness has never put it out. &quot</h3>
+            <p class="mb-30" style="float: right;">- John 1:15</p>
+          </div>
+          </div>
         </div>
       </div>
     </div>
@@ -396,10 +377,9 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="https://www.facebook.com/Tablac.Kim" target="_blank"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="https://twitter.com/kim_tablac" target="_blank"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/kim.tablac/" target="_blank"><i class="ion-social-instagram"></i></a></li>  
-          <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/" target="_blank"><i style="font-size: 30px"  class="ion-social-youtube"></i>
+          <li><a href="https://www.facebook.com/Tablac.Kim"><i class="ion-social-facebook"></i></a></li>
+          <li><a href="https://twitter.com/kim_tablac"><i class="ion-social-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/kim.tablac/"><i class="ion-social-instagram"></i></a></li>                  
         </ul>
 
       </div>
