--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot<b>Glory</b> to God in the highest heaven, and in earth peace to those on whom his favor rests. &quot</h3>
+            <h3 class="separator" style="color: #FFC133;">&quot<strong>Glory</strong> to God in the highest heaven, and in earth peace to those on whom his favor rests. &quot</h3>
             <p class="mb-30" style="float: right;">- Luke 2:14</p>
           </div>
           </div>
