--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <link rel="shortcut icon" href="images/logo.png">
 
   <!-- =======================================================
-    Theme Name: Folio
-    Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
+    
+    Author: Kim Tablac
+    Hello, Meg meg!
+    
   ======================================================= -->
 </head>
 
