--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="#header" class="smoothScroll">Home</a></li>     
+          <li><a href="#header" class="smoothScroll">Home</a></li>   
+          <li><a href="#higlight" class="smoothScroll">Highlight</a></li>  
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
 
@@ -81,6 +82,69 @@
     </div>
   </div>
   <!-- End section header -->
+
+   <!-- start section journal -->
+  <div id="higlight" class="text-left paddsection">
+
+    <div class="container">
+      <div class="section-title text-center">
+        <h2>Highlight</h2>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="journal-block">
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6">
+            <div class="journal-info">
+
+              <a href="https://www.facebook.com/lccphagios/" target="_blank"><img src="images/borthersinChristJesus.jpg" class="img-responsive" alt="img"></a>
+
+              <div class="journal-txt">          
+                <h4><a href="https://www.facebook.com/lccphagios/" target="_blank">Brothers in Christ</a></h4>
+                <p class="separator">Faith deepens with fellowship and our love results in healing.
+                </p>
+
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="journal-info">
+
+              <a href="https://www.facebook.com/youthlifehagios/" target="_blank"><img src="images/ylife.jpg" class="img-responsive" alt="img"></a>
+
+              <div class="journal-txt">          
+                <h4><a href="https://www.facebook.com/youthlifehagios/" target="_blank">I AM YOUNG. I AM ALIVE. YOUTHLIFE!</a></h4>
+                <p class="separator">Youth Life is a fellowship for the generation with the most potential, the YOUTH!</p>
+
+              </div>
+
+            </div>
+          </div>
+
+           <div class="col-lg-4 col-md-6">
+            <div class="journal-info">
+
+              <a href="https://www.facebook.com/lifeconnectionchurchph/" target="_blank"><img src="images/alphacourse.jpg" class="img-responsive" alt="img"></a>
+
+              <div class="journal-txt">          
+                <h4><a href="https://www.facebook.com/lifeconnectionchurchph/" target="_blank">Alpha course</a></h4>
+                <p class="separator">Opportunity to explore the meaning of life</p>
+
+              </div>
+
+            </div>
+          </div>
+                
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- End section journal -->
 
   <!-- start sectoion contact -->
   <div id="contact" class="paddsection">
