--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="shortcut icon" href="images/logo.png">
 
   <!-- =======================================================
-    
+    Date Created: December 22, 2019
     Author: Kim Tablac
     Hello, Meg meg!
     
