--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot<strong style="font-size:34px;">Glory</strong> to God in the highest heaven, and in earth peace to those on whom his favor rests. &quot</h3>
-            <p class="mb-30" style="float: right;">- Luke 2:14</p>
+            <h3 class="separator" style="color: #FFC133;">&quot Today in the town of David a Savior has been born to you; he is the Messiah, the Lord &quot</h3>
+            <p class="mb-30" style="float: right;">- Luke 2:11</p>
           </div>
           </div>
         </div>
