--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot Today in the town of David a Savior has been born to you; he is the Messiah, the Lord &quot</h3>
+            <h3 class="separator" style="color: #FFC133;">&quot Today in the town of David a Savior has been born to you; he is the Messiah, the Lord. &quot</h3>
             <p class="mb-30" style="float: right;">- Luke 2:11</p>
           </div>
           </div>
