--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
      <div class="row">
        <div class="col-lg-12 col-md-6 p-3">
         <p class="separator"><strong>QRC: </strong>Just Click or Scan Me</p>
-        <a href="https://forms.gle/9qjyTXoMYuVWTCM28" target="_blank" style="text-decoration: none;"><img src="images/qrform.png" class="border border-warning" alt="Google form" class="img-thumbnail">
+        <a href="https://forms.gle/9qjyTXoMYuVWTCM28" target="_blank" style="text-decoration: none;"><img src="images/qrform.png" class="img-response border border-warning" alt="Google form" class="img-thumbnail">
       </div></a>
         
       <div class="col-lg-12 col-md-6">    
