--- a/index.html
+++ b/index.html
@@ -170,8 +170,13 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot Today in the town of David a Savior has been born to you; he is the Messiah, the Lord. &quot</h3>
-            <p class="mb-30" style="float: right;">- Luke 2:11</p>
+            <h3 class="separator" style="color: #FFC133;">&quot When I consider your heavens,
+    the work of your fingers,
+the moon and the stars,
+    which you have set in place,
+what is mankind that you are mindful of them,
+    human beings that you care for them? &quot</h3>
+            <p class="mb-30" style="float: right;">- Psalm 8:3-4</p>
           </div>
           </div>
         </div>
