--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
     </div>
 
     <div class="container">
-      <div class="journal-block">
+      <div class="highlight-block">
         <div class="row">
 
           <div class="col-lg-4 col-md-6">
-            <div class="journal-info">
+            <div class="highlight-info">
 
               <a href="https://www.facebook.com/lccphagios/" target="_blank"><img src="images/borthersinChristJesus.jpg" class="img-responsive" alt="img"></a>
 
-              <div class="journal-txt">          
+              <div class="highlight-txt">          
                 <h4><a href="https://www.facebook.com/lccphagios/" target="_blank">Brothers in Christ</a></h4>
                 <p class="separator">Faith deepens with fellowship and our love results in healing.
                 </p>
@@ -112,11 +112,11 @@
           </div>
 
           <div class="col-lg-4 col-md-6">
-            <div class="journal-info">
+            <div class="highlight-info">
 
               <a href="https://www.facebook.com/youthlifehagios/" target="_blank"><img src="images/ylife.jpg" class="img-responsive" alt="img"></a>
 
-              <div class="journal-txt">          
+              <div class="highlight-txt">          
                 <h4><a href="https://www.facebook.com/youthlifehagios/" target="_blank">I AM YOUNG. I AM ALIVE. YOUTHLIFE!</a></h4>
                 <p class="separator">Youth Life is a fellowship for the generation with the most potential, the YOUTH!</p>
 
@@ -126,11 +126,11 @@
           </div>
 
            <div class="col-lg-4 col-md-6">
-            <div class="journal-info">
+            <div class="highlight-info">
 
               <a href="https://www.facebook.com/lifeconnectionchurchph/" target="_blank"><img src="images/alphacourse.jpg" class="img-responsive" alt="img"></a>
 
-              <div class="journal-txt">          
+              <div class="highlight-txt">          
                 <h4><a href="https://www.facebook.com/lifeconnectionchurchph/" target="_blank">Alpha course</a></h4>
                 <p class="separator">Opportunity to explore the meaning of life</p>
 
