--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
   <!-- End section header -->
 
-   <!-- start section journal -->
+   <!-- start section highlight -->
   <div id="higlight" class="text-left paddsection">
 
     <div class="container">
@@ -144,9 +144,9 @@
     </div>
 
   </div>
-  <!-- End section journal -->
+  <!-- End section highlight -->
 
-  <!-- start sectoion contact -->
+  <!-- start sectoion --  -->
   <div id="contact" class="paddsection">
     <div class="container">
       <div class="contact-block1">
