--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/logo.png">
+  <script data-ad-client="ca-pub-5006123060694403" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- =======================================================
     Date Created: December 22, 2019
@@ -145,6 +146,7 @@
 
   </div>
   <!-- End section highlight -->
+ 
 
   <!-- start sectoion --  -->
   <div id="contact" class="paddsection">
