--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   </div>
   <!-- End section highlight -->
- 
+ <script data-ad-client="ca-pub-5006123060694403" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- start sectoion --  -->
   <div id="contact" class="paddsection">
