--- a/index.html
+++ b/index.html
@@ -172,13 +172,8 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot When I consider your heavens,
-    the work of your fingers,
-the moon and the stars,
-    which you have set in place,
-what is mankind that you are mindful of them,
-    human beings that you care for them? &quot</h3>
-            <p class="mb-30" style="float: right;">- Psalm 8:3-4</p>
+            <h3 class="separator" style="color: #FFC133;">Jesus answered, &quot It is written: &aposMan shall not live on bread alone, but on every word that comes from the mouth of God.&apos &quot</h3>
+            <p class="mb-30" style="float: right;">- Matthew 4:4</p>
           </div>
           </div>
         </div>
