--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">Jesus answered, &quot It is written: &apos Man shall not live on bread alone, but on every word that comes from the mouth of God. &apos &quot</h3>
+            <h3 class="separator" style="color: #FFC133;">Jesus answered, &quot It is written: 'Man shall not live on bread alone, but on every word that comes from the mouth of God.'&quot</h3>
             <p class="mb-30" style="float: right;">- Matthew 4:4</p>
           </div>
           </div>
