--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- =======================================================
     Date Created: December 22, 2019
     Author: Kim Tablac
-    Hello, Meg meg!
+    Hello, Meg meg! I know I've done a lot of bad things, sana mapatawad mo ako at maging okay na tayo. Miss na miss kita.
     
   ======================================================= -->
 </head>
@@ -172,8 +172,8 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">Jesus answered, &quot It is written: 'Man shall not live on bread alone, but on every word that comes from the mouth of God.'&quot</h3>
-            <p class="mb-30" style="float: right;">- Matthew 4:4</p>
+            <h3 class="separator" style="color: #FFC133;">&quotYet to all who died receive him, to those who believed in his name, he gave the right to become children of God &quot</h3>
+            <p class="mb-30" style="float: right;">- John 1:12</p>
           </div>
           </div>
         </div>
