--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
-                <li><span>1373 A Maceda St, Sampaloc, Manila, 1008 Metro Manila</span></li>
+                <li><span><i class="fas fa-street-view"></i> 1373 A Maceda St, Sampaloc, Manila, 1008 Metro Manila</span></li>
                 <li><span>Philippines</span></li>
                 <li><span>+63 09270633353</span></li>
                 <li><span>tablac.kimpoy@gmail.com</span></li>
