--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/logo.png">
   <script data-ad-client="ca-pub-5006123060694403" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script src="https://kit.fontawesome.com/d6ad4d3d70.js" crossorigin="anonymous"></script>
 
   <!-- =======================================================
     Date Created: December 22, 2019
