--- a/index.html
+++ b/index.html
@@ -173,8 +173,13 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quotYet to all who died receive him, to those who believed in his name, he gave the right to become children of God&quot</h3>
-            <p class="mb-30" style="float: right;">- John 1:12</p>
+            <h3 class="separator" style="color: #FFC133;">&quot1. Sing to the Lord a new song,
+    for he has done marvelous things;
+his right hand and his holy arm
+    have worked salvation for him.
+2. The Lord has made his salvation known
+    and revealed his righteousness to the nations.&quot</h3>
+            <p class="mb-30" style="float: right;">- Psalm 98:1-2</p>
           </div>
           </div>
         </div>
