--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot1. Sing to the Lord a new song,
+            <h3 class="separator" style="color: #FFC133;">&quot<span style="font-size:12px">1.</span> Sing to the Lord a new song,
     for he has done marvelous things;
 his right hand and his holy arm
     have worked salvation for him.
