--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot<span style="font-size:12px">1.</span> Sing to the Lord a new song,
+            <h3 class="separator" style="color: #FFC133;">&quot<span style="font-size:16px">1.</span> Sing to the Lord a new song,
     for he has done marvelous things;
 his right hand and his holy arm
     have worked salvation for him.
-2. The Lord has made his salvation known
+              <span style="font-size:16px">2.</span> The Lord has made his salvation known
     and revealed his righteousness to the nations.&quot</h3>
             <p class="mb-30" style="float: right;">- Psalm 98:1-2</p>
           </div>
