--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <li><a href="https://www.instagram.com/kim.tablac/"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>  
            <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/"><i style="font-size: 30px"  class="ion-social-youtube"></i></a></li>                   
         </ul>
+        <div align=right><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-AyawDAydx8bwYw1b-15.gif' border='0' alt='web counter free'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=AyawDAydx8bwYw1b'></script></div>
       </div>
     </div>
   </div>
