--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
           <li><a href="https://www.instagram.com/kim.tablac/"><i style="font-size: 30px"  class="ion-social-instagram"></i></a></li>  
            <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/"><i style="font-size: 30px"  class="ion-social-youtube"></i></a></li>                   
         </ul>
-        <div align=right><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-AyawDAydx8bwYw1b-15.gif' border='0' alt='web counter free'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=AyawDAydx8bwYw1b'></script></div>
+        <!-- Start of WebFreeCounter Code -->
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gxoxkp&nd=6&style=13" border="0" alt="free counter"></a>
+<!-- End of WebFreeCounter Code -->
       </div>
     </div>
   </div>
