--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            <li><a href="https://www.youtube.com/channel/UC3Rkj0l6FsO0EPu7V_aa2YQ?sub-confirmation=1/"><i style="font-size: 30px"  class="ion-social-youtube"></i></a></li>                   
         </ul>
         <!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gxoxkp&nd=6&style=13" border="0" alt="free counter"></a>
+<a href="https://www.webfreecounter.com/" target="_blank" style="pointer-events: none;"><img src="https://www.webfreecounter.com/hit.php?id=gxoxkp&nd=6&style=13" border="0" alt="free counter"></a>
 <!-- End of WebFreeCounter Code -->
       </div>
     </div>
