--- a/index.html
+++ b/index.html
@@ -176,13 +176,8 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot<span style="font-size:16px">1.</span> Sing to the Lord a new song,
-    for he has done marvelous things;
-his right hand and his holy arm
-    have worked salvation for him.
-              <span style="font-size:16px">2.</span> The Lord has made his salvation known
-    and revealed his righteousness to the nations.&quot</h3>
-            <p class="mb-30" style="float: right;">- Psalm 98:1-2</p>
+            <h3 class="separator" style="color: #FFC133;">&quot <span style="font-size: 16px;">24</span> And let us consider how we may spur one another on toward love and good deeds, <span style="font-size: 16px;">25</span> not giving up meeting together, as some are in the habit of doing, but encouraging one another—and all the more as you see the Day approaching.&quot</h3>
+            <p class="mb-30" style="float: right;">- Hebrews 10:24-25</p>
           </div>
           </div>
         </div>
