--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
             <div class="about-descr" >
 
             
-            <h3 class="separator" style="color: #FFC133;">&quot <span style="font-size: 16px;">24</span> And let us consider how we may spur one another on toward love and good deeds, <span style="font-size: 16px;">25</span> not giving up meeting together, as some are in the habit of doing, but encouraging one another—and all the more as you see the Day approaching.&quot</h3>
-            <p class="mb-30" style="float: right;">- Hebrews 10:24-25</p>
+            <h3 class="separator" style="color: #FFC133;">&quotThe Lord is not slow in keeping his promise, as some understand slowness. Instead he is patient with you, not wanting anyone to perish, but everyone to come to repentance.&quot</h3>
+            <p class="mb-30" style="float: right;">- 2 Peter 3:9</p>
           </div>
           </div>
         </div>
