--- a/products.html
+++ b/products.html
@@ -162,10 +162,10 @@
                             <h2 class="mb-30 ">GET IN TOUCH</h2>
 
                             <ul class="contact-details ">
-                                <li><span> <i class="fas fa-street-view "></i></i> 1373 A Maceda St, Sampaloc, Manila, 1008 Metro Manila</span></li>
-                                <li><span>Philippines</span></li>
-                                <li><span>+63 09270633353</span></li>
-                                <li><span>tablac.kimpoy@gmail.com</span></li>
+                               <li><span> <i class="fas fa-street-view "></i> 1373 A Maceda St, Sampaloc, Manila, 1008 Metro Manila</span></li>
+                                <li><span> <i class="fas fa-search-location"></i> Philippines</span></li>
+                                <li><span> <i class="fas fa-phone-square-alt"></i> +63 09270633353</span></li>
+                                <li><span> <i class="fas fa-envelope"></i> tablac.kimpoy@gmail.com</span></li>
                             </ul>
 
                         </div>
