--- a/products.html
+++ b/products.html
@@ -63,7 +63,7 @@
     </nav>
     <div class="container-fluid p-5">
         <h1>A GIFT FOR YOUR LOVED ONES
-            <span style="line-height: 0.2;" class="p-0"><p>Nothings's too expensive for your beloved.</p></span>
+            <span style="line-height: 0.2;" class="p-0"><p>Nothing's too expensive for your beloved.</p></span>
         </h1>
 
         <div class="row">
