--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
     <!-- End section highlight -->
     <div class="jumbotron text-center">
-        <h1 class="display-4">A GIFT FOR YOUR LOVED ONES</h1>
+        <h1 class="display-4">A SIMPLE GIFT FOR A GREAT PERSON</h1>
         <p class="lead">Let your love bloom even more.</p>
 
         <a class="btn btn-primary btn-lg" href="products.html" role="button ">View</a>
