--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <p>&copy; Copyrights Kim Tablac. All rights reserved.</p>
 
       <div class="credits" style="font-size: 12px;">       
-        Designed by <a href="https://bootstrapmade.com/"  target="_blank">BootstrapMade | </a>
+        Designed by <a href="https://bootstrapmade.com/bootstrap-one-page-templates/"  target="_blank">BootstrapMade | </a>
          <a href="https://www.facebook.com/Tablac.Kim"  target="_blank">Kim Tablac</a>
       </div>
       </div>
