--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <ul class="nav-menu list-unstyled">
                     <li><a href="#header" class="smoothScroll">Home</a></li>
-                    <li><a href="products.html" class="smoothScroll">Flowers</a></li>
+                    <li><a href="products.html" class="smoothScroll">Shop</a></li>
                     <li><a href="#higlight" class="smoothScroll">Highlight</a></li>
                     <li><a href="#contact" class="smoothScroll">Contact</a></li>
                 </ul>
