--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Kim Tablac</title>
+    <title>Kim Tablac | Shop</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
 
