--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
         </h1>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-xl-2 col-md-3 col-sm-6">
                 <div class="card" style="width: 18rem;">
 
                     <a class="popup-img" href="images/flowers/blueflower-1.jpg">
@@ -80,7 +80,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-xl-2 col-md-3 col-sm-6">
                 <div class="card" style="width: 18rem;">
 
                     <a class="popup-img" href="images/flowers/sunnyday.jpg">
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-xl-2 col-md-3 col-sm-6">
                 <div class="card" style="width: 18rem; ">
 
                     <a class="popup-img " href="images/flowers/everyday-love.jpg ">
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-sm-6 ">
+            <div class="col-xl-2 col-md-3 col-sm-6 ">
                 <div class="card " style="width: 18rem; ">
 
                     <a class="popup-img " href="images/flowers/sunnymorning.jpg ">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-xl-2 col-md-3 col-sm-6">
                 <div class="card " style="width: 18rem; ">
 
                     <a class="popup-img " href="images/flowers/sunnyday.jpg ">
